# SuricataEveToMysql

./: CMakeLists.txt  create_ids_table.sql  eve.json  ids_mysql.conf  main.c  readme.txt  sfghash.c  sfghash.h  sfhashfcn.c
