
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(eve2mysql) 
#string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
#CMAKE_CXX_FLAGS
#string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")


AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(eve2mysql ${SRC_LIST})
TARGET_LINK_LIBRARIES(eve2mysql libmysqlclient.so)
