
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(idsoutput) 
#string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
#CMAKE_CXX_FLAGS
#string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")


ADD_DEFINITIONS("-Wall -g")
AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_EXECUTABLE(idsoutput ${SRC_LIST})
TARGET_LINK_LIBRARIES(idsoutput libmysqlclient.so libpthread.so librdkafka.so)
